•   Change Logo •   Change Colors A Little Bit Of Buttons

--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -6,7 +6,7 @@
   background-color: $variant;
 
   &:hover {
-    border: buttonBorder($hover);
+    border: buttonBorder(transparent);
     background-color: $hover;
   }
 
