--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,33 +1,31 @@
-$primary: rgb(30, 167, 253);
-$primaryHover: rgb(30, 167, 253, 0.8);
-$primaryShadow: rgb(30, 167, 253, 0.7);
-$primaryShadowHover: rgb(30, 167, 253, 0.9);
-// $primaryDisabled: rgb(30, 167, 253, 0.4);
-$primaryFlat: rgb(30, 167, 253, 0.2);
-$primaryFlatHover: rgb(30, 167, 253, 0.3);
-$primaryTextHover: rgb(30, 167, 253, 0.1);
-$secondary: rgb(161, 50, 180);
-// $secondaryDisabled: rgb(161, 50, 180, 0.5);
-$secondaryHover: rgb(161, 50, 180, 0.8);
-$secondaryShadow: rgb(161, 50, 180, 0.7);
-$secondaryShadowHover: rgb(161, 50, 180, 0.9);
-$secondaryFlat: rgb(161, 50, 180, 0.2);
-$secondaryFlatHover: rgb(161, 50, 180, 0.3);
-$secondaryTextHover: rgb(161, 50, 180, 0.1);
-$success: #1b5e20;
-$successHover: rgb(27, 94, 32, 0.8);
-$successShadow: rgb(27, 94, 32, 0.7);
-$successShadowHover: rgb(27, 94, 32, 0.9);
-$successFlat: rgb(27, 94, 32, 0.2);
-$successFlatHover: rgb(27, 94, 32, 0.3);
-$successTextHover: rgb(27, 94, 32, 0.1);
-$error: #d32f2f;
-$errorHover: rgb(211, 47, 47, 0.8);
-$errorShadow: rgb(211, 47, 47, 0.7);
-$errorShadowHover: rgb(211, 47, 47, 0.9);
-$errorFlat: rgb(211, 47, 47, 0.2);
-$errorFlatHover: rgb(211, 47, 47, 0.3);
-$errorTextHover: rgb(211, 47, 47, 0.1);
+$primary: rgb(0, 114, 245);
+$primaryHover: rgba(0, 114, 245, 0.8);
+$primaryShadow: rgba(0, 114, 245, 0.7);
+$primaryShadowHover: rgba(0, 114, 245, 0.9);
+$primaryFlat: rgba(0, 114, 245, 0.2);
+$primaryFlatHover: rgba(0, 114, 245, 0.3);
+$primaryTextHover: rgba(0, 114, 245, 0.1);
+$secondary: rgb(128, 90, 213);
+$secondaryHover: rgba(128, 90, 213, 0.8);
+$secondaryShadow: rgba(128, 90, 213, 0.7);
+$secondaryShadowHover: rgba(128, 90, 213, 0.9);
+$secondaryFlat: rgba(128, 90, 213, 0.2);
+$secondaryFlatHover: rgba(128, 90, 213, 0.3);
+$secondaryTextHover: rgba(128, 90, 213, 0.1);
+$success: rgb(23, 201, 100);
+$successHover: rgba(23, 201, 100, 0.8);
+$successShadow: rgba(23, 201, 100, 0.7);
+$successShadowHover: rgba(23, 201, 100, 0.9);
+$successFlat: rgba(23, 201, 100, 0.2);
+$successFlatHover: rgba(23, 201, 100, 0.3);
+$successTextHover: rgba(23, 201, 100, 0.1);
+$error: rgb(211, 47, 47);
+$errorHover: rgba(211, 47, 47, 0.8);
+$errorShadow: rgba(211, 47, 47, 0.7);
+$errorShadowHover: rgba(211, 47, 47, 0.9);
+$errorFlat: rgba(211, 47, 47, 0.2);
+$errorFlatHover: rgba(211, 47, 47, 0.3);
+$errorTextHover: rgba(211, 47, 47, 0.1);
 // $linkedin: #008cc9;
 // $linkedinShadow: rgb(0, 140, 201, 0.7);
 // $linkedinFlat: rgb(0, 140, 201, 0.2);
