--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,35 +1,38 @@
-$primary: rgb(0, 114, 245);
-$primaryHover: rgba(0, 114, 245, 0.8);
-$primaryShadow: rgba(0, 114, 245, 0.7);
-$primaryShadowHover: rgba(0, 114, 245, 0.9);
-$primaryFlat: rgba(0, 114, 245, 0.2);
-$primaryFlatHover: rgba(0, 114, 245, 0.3);
-$primaryTextHover: rgba(0, 114, 245, 0.1);
-$secondary: rgb(128, 90, 213);
-$secondaryHover: rgba(128, 90, 213, 0.8);
-$secondaryShadow: rgba(128, 90, 213, 0.7);
-$secondaryShadowHover: rgba(128, 90, 213, 0.9);
-$secondaryFlat: rgba(128, 90, 213, 0.2);
-$secondaryFlatHover: rgba(128, 90, 213, 0.3);
-$secondaryTextHover: rgba(128, 90, 213, 0.1);
-$success: rgb(23, 201, 100);
-$successHover: rgba(23, 201, 100, 0.8);
-$successShadow: rgba(23, 201, 100, 0.7);
-$successShadowHover: rgba(23, 201, 100, 0.9);
-$successFlat: rgba(23, 201, 100, 0.2);
-$successFlatHover: rgba(23, 201, 100, 0.3);
-$successTextHover: rgba(23, 201, 100, 0.1);
-$error: rgb(211, 47, 47);
-$errorHover: rgba(211, 47, 47, 0.8);
-$errorShadow: rgba(211, 47, 47, 0.7);
-$errorShadowHover: rgba(211, 47, 47, 0.9);
-$errorFlat: rgba(211, 47, 47, 0.2);
-$errorFlatHover: rgba(211, 47, 47, 0.3);
-$errorTextHover: rgba(211, 47, 47, 0.1);
-// $linkedin: #008cc9;
-// $linkedinShadow: rgb(0, 140, 201, 0.7);
-// $linkedinFlat: rgb(0, 140, 201, 0.2);
-// $linkedinFlatHover: rgb(0, 140, 201, 0.3);
-$white: #ffffff;
-$gray: #eceef0;
-$darkGray: #7e868c;
+@import "./colors.scss";
+
+$rounded: (
+  "xs": 4px,
+  "sm": 7px,
+  "md": 10px,
+  "lg": 14px,
+  "xl": 18px,
+);
+
+$widths: (
+  "auto": auto,
+  "quarter": 25%,
+  "half": 50%,
+  "full": 100%,
+);
+
+$alignments: (
+  "start": flex-start,
+  "center": center,
+  "end": flex-end,
+);
+
+$sizes: "xs" 11px 8px 30px, "sm" 12px 10px 35px, "md" 14px 11px 44px,
+  "lg" 16px 12px 50px, "xl" 16px 14px 60px;
+
+$variants: "primary" $primary $primaryHover $primaryTextHover
+    $primaryShadowHover $primaryFlat $primaryFlatHover,
+  "secondary" $secondary $secondaryHover $secondaryTextHover
+    $secondaryShadowHover $secondaryFlat $secondaryFlatHover,
+  "success" $success $successHover $successTextHover $successShadowHover
+    $successFlat $successFlatHover,
+  "error" $error $errorHover $errorTextHover $errorShadowHover $errorFlat
+    $errorFlatHover,
+  "telegram" $telegram $telegramHover $telegramTextHover $telegramShadowHover
+    $telegramFlat $telegramFlatHover,
+  "warning" $warning $warningHover $warningTextHover $warningShadowHover
+    $warningFlat $warningFlatHover;
